<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_unit_setting">
        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/weight_units"
            android:entryValues="@array/fonte_unitsEnum"
            android:key="defaultUnit"
            android:summary=""
            android:title="@string/pref_preferredUnitTitle" />

        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/distance_units"
            android:entryValues="@array/distance_unitsEnum"
            android:key="defaultDistanceUnit"
            android:summary=""
            android:title="@string/pref_preferredDistanceUnitTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_ui_setting">
        <androidx.preference.ListPreference
            android:defaultValue="2"
            android:entries="@array/daynightauto"
            android:entryValues="@array/daynightauto_enum"
            android:key="dayNightAuto"
            android:summary="Auto"
            android:shouldDisableView="true"
            android:title="@string/daynightmode_settingtitle" />



    </PreferenceCategory>

</PreferenceScreen>
